// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardPopover renders default 1`] = `
<body>
  <div>
    <div>
      [ContainerRef]
      <div
        style="position: absolute; pointer-events: all; top: 0px; left: 0px; z-index: 100;"
      >
        <div
          class="makeStyles-item-1"
          style="transform-origin: left top;"
        >
          <div>
            [Children]
          </div>
        </div>
      </div>
    </div>
    <div>
      [AnchorRef]
    </div>
  </div>
</body>
`;

exports[`CardPopover renders when closed 1`] = `
<body>
  <div>
    <div>
      [ContainerRef]
    </div>
    <div>
      [AnchorRef]
    </div>
  </div>
</body>
`;
